style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

li {
  list-style: none;
}

body {
  background-color: rgb(0, 250, 230);
  font-family: "poppins", sans-serif;
}

p {
  font-size: 0.5rem;
  pointer-events: none;
}

.main {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 90vh;
}

.periodic-bg {
  aspect-ratio: 18/10;
  display: block;
  width: 160vmin;
  display: grid;
  grid-template-columns: repeat(18, 1fr);
  grid-template-rows: repeat(10, 1fr);
  background: rgb(0, 0, 0);
  padding: 1vmin;
  gap: 0;
}

.periodic-bg .element-box {
  background: rgb(0, 84, 144);
  padding: 10px;
  border: 2px solid black;
}

.periodic-bg .element-box .hyperlink {
  height: 100%;
  width: 100%;
  padding: 0px;
}

.periodic-bg .element {
  text-align: center;
  font-size: 1.5rem;
  color: #fff;
  text-decoration: none;
  transition: all 0.3s ease-out;
}

/*Empty space between H and He*/

.periodic-bg .empty-space-one {
  background: rgb(0, 2, 144);
  grid-area: 1/2/1/18;
}

.periodic-bg .empty-space-two {
  background: rgb(144, 0, 72);
  grid-area: 2/3/2/13;
}

.periodic-bg .empty-space-three {
  background: rgb(0, 144, 101);
  grid-area: 3/3/3/13;
}

.periodic-bg .empty-space-four {
  background: rgb(0, 2, 144);
  grid-area: 9/1/11/3;
}

.periodic-bg .empty-space-five {
  background: rgb(0, 2, 144);
  grid-area: 9/18/11/19;
}

.periodic-bg .divider {
  background: rgb(74, 0, 144);
  grid-area: 8/1/9/19;
}

/* Hover effect */

.element-box {
  position: relative;
  transition: transform 0.3s ease, box-shadow 0.3s ease;
  overflow: hidden;
}

.element-box:hover {
  transform: scale(1.5); /* Increases size on hover */
  z-index: 1; /* Places the hovered element above others */
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
}

.element-hover {
  display: none; /* Hidden by default */
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  transform: scale(1);
}

.atomic-number {
  position: absolute;
  top: 0;
  left: 0;
}

.atomic-mass {
  position: absolute;
  bottom: 0;
  right: 0;
}

.element-symbol {
  position: absolute;
  top: 20%;
  left: 37%;
  font-size: 1rem;
}

.element-name {
  position: absolute;
  bottom: 25%;
  left: 23%;
}

.element-box:hover .inner-element-name {
  opacity: 0; /* Fade out original content */
  pointer-events: none;
  display: none;
}

.element-box:hover .element-hover {
  display: block; /* Show hover content */
  opacity: 1;
  pointer-events: all;
}

/*Popup*/

.popup-container {
  position: fixed;
  top: 0%;
  left: 0%;
  background: rgba(0, 0, 0, 0.5);
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: all 0.5s ease-in-out;
  opacity: 0;
  pointer-events: none;
}

.popup {
  background: white;
  border-radius: 2rem;
  transition: transform 0.5s ease;
  transform: translateY(-2rem);
  min-width: 50%;
  min-height: 65vh;
  opacity: 0;
  pointer-events: none;

  /*inner elements styling*/
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}

.main-info {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.main-info img {
  width: 15rem;
  height: 15rem;
}

.popup li {
  display: flex;
}

.ele-abundance {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.popup-close {
  position: absolute;
  right: 0;
  top: 0;
  padding: 1rem;
  border-radius: 1rem;
  background: rgb(68, 76, 91);
  color: white;
  cursor: pointer;
}

.active {
  opacity: 1;
  pointer-events: all;
}

/*Search box styling following a youtuber tutorial*/
.bg-search-box {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 10vh;
}
.search-box {
  width: 20%;
  background: #fff;
  border-radius: 1vmin;
  align-self: center;
  border-radius: 2rem;
}
.search-box .row {
  display: flex;
  align-items: center;
  padding: 2vmin;
}
.search-box .row input {
  margin-left: 1rem;
  flex: 1;
  color: #333;
  height: 3vh;
  background: transparent;
  border: 0;
  outline: 0;
  font-size: 18px;
}
.search-box .row button {
  background: transparent;
  border: 0;
  outline: 0;
}
.search-box .row button fa-solid {
  width: 25px;
  cursor: pointer;
  color: #555;
  font-size: 22px;
}
.search-box .result-box ul {
  border-top: 1px solid #999;
  padding: 15px 10px;
}
.search-box .result-box ul li {
  list-style: none;
  border-radius: 3px;
  padding: 15px 10px;
  cursor: pointer;
}
.search-box .result-box ul li:hover {
  background: #e9f3ff;
}
.search-box .result-box {
  max-height: 300px;
  overflow-y: scroll;
}

/*temperature slider styling*/
.temp-value {
  width: 3rem;
}

